force-app/main/default/objects/OtherBank__c/OtherBank__c.object-meta.xml
<CustomObject>
    <label>Other+Bank</label>
    <nameField>
        <displayFormat>OTB-{000000}</displayFormat>
        <label>OTHER+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>