force-app/main/default/objects/OtherBank__c/fields/OtherRecordTypeFormu__c.field-meta.xml
<CustomField>
    <fullName>OtherRecordTypeFormu__c</fullName>
    <formula>OtherRevenueCostID__r.RecordType.Name</formula>
    <label>OTHER RECORD TYPE-FORMULA</label>
    <type>Text</type>
</CustomField>