force-app/main/default/objects/OtherBank__c/fields/OtherRevenueCostID__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenueCostID__c</fullName>
    <label>OTHER REVENUE/COST ID</label>
    <referenceTo>OtherRevenueCost__c</referenceTo>
    <relationshipLabel>OTHER+BANK</relationshipLabel>
    <relationshipName>OtherBank</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>