force-app/main/default/objects/OtherBank__c/fields/UnpaidBalanceOfOtherFormula__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfOtherFormula__c</fullName>
    <formula>OtherRevenueCostID__r.DifferenceOtherCost__c</formula>
    <label>UNPAID BALANCE OF OTHER-FORMULA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>