force-app/main/default/objects/OtherBank__c/fields/UnpaidBalOfOtherUSDBank__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalOfOtherUSDBank__c</fullName>
    <label>UNPAID BAL OF OTHER(USD)-BANK</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>