force-app/main/default/objects/OtherBank__c/fields/UnpaidBalOfOtherUSDFormu__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalOfOtherUSDFormu__c</fullName>
    <formula>OtherRevenueCostID__r.DifferenceOtherCostUSD__c</formula>
    <label>UNPAID BAL OF OTHER(USD)-FORMU</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>