force-app/main/default/objects/OtherBank__c/fields/UnreceivedBalanceOfOtherForBank__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceOfOtherForBank__c</fullName>
    <label>UNRECEIVED BALANCE OF OTHER-FOR BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>