force-app/main/default/objects/OtherBank__c/fields/UnreceivedBalOfOtherUSDBank__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalOfOtherUSDBank__c</fullName>
    <label>UNRECEIVED BAL OF OTHER(USD)-BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>